--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "botbuilder": "^3.7.0",
+    "node-wit": "^4.2.0",
     "path": "^0.12.7",
     "restify": "^4.3.0",
     "serve-favicon": "^2.4.1"
